Migration to AssertJ